--- a/client/scripts/popover/note/note-popover.sass
+++ b/client/scripts/popover/note/note-popover.sass
@@ -25,18 +25,17 @@
     background-color: #fff
     padding: 10px
     position: relative
-    color: #000
-    //+border-radius(10px)
+    color: $gs-black
 
     p.chars-left
-      color: #888
+      color: $gs-gray
       position: absolute
       right: 2em
       margin: 0
       cursor: default
       +user-select(none)
     p.chars-left.warning
-      color: #f00
+      color: $gs-red
 
     textarea[disabled]
       text-decoration: line-through
@@ -46,10 +45,8 @@
 
   textarea
     width: 100%
+    padding: 0 calc((100% - ((1200px - ((35px * 2) + (52px * 2) + (15px * 4))) / 3))/2)
     height: 3em
-    //border: solid 0 #fff
-    //outline-width: 0
-    font-size: 1.4em
 
   .note-skipbox
     padding: 0 10px
